force-app/main/default/objects/Sales_Opportunity__c/Sales_Opportunity__c.object-meta.xml
<CustomObject>
    <label>Sales Opportunity</label>
    <nameField>
        <label>Sales Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>