force-app/main/default/objects/Sales_Opportunity__c/fields/Account_Shipping_State__c.field-meta.xml
<CustomField>
    <fullName>Account_Shipping_State__c</fullName>
    <formula>Account__r.ShippingState</formula>
    <label>Account Shipping State</label>
    <type>Text</type>
</CustomField>