force-app/main/default/objects/Sales_Opportunity__c/fields/Administrative_VMS_Fee_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Administrative_VMS_Fee_Percentage__c</fullName>
    <label>Administrative VMS Fee Percentage</label>
    <length>60</length>
    <type>Text</type>
</CustomField>