force-app/main/default/objects/Sales_Opportunity__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>IF (ISNULL( Close_Date__c ), TODAY(),Close_Date__c ) - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>