force-app/main/default/objects/Sales_Opportunity__c/fields/Approver_Comment__c.field-meta.xml
<CustomField>
    <fullName>Approver_Comment__c</fullName>
    <label>Approver Comment</label>
    <type>TextArea</type>
</CustomField>