force-app/main/default/objects/Sales_Opportunity__c/fields/Are_you_a_vendor_neutral_MSP_VMS__c.field-meta.xml
<CustomField>
    <fullName>Are_you_a_vendor_neutral_MSP_VMS__c</fullName>
    <label>Are you a vendor neutral MSP/VMS?</label>
    <length>60</length>
    <type>Text</type>
</CustomField>