force-app/main/default/objects/Sales_Opportunity__c/fields/Back_Office_Review_Date_Completed__c.field-meta.xml
<CustomField>
    <fullName>Back_Office_Review_Date_Completed__c</fullName>
    <label>Back Office Review Date Completed</label>
    <type>Date</type>
</CustomField>