force-app/main/default/objects/Sales_Opportunity__c/fields/Backoffice_Review_Complete__c.field-meta.xml
<CustomField>
    <fullName>Backoffice_Review_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Backoffice Review Complete</label>
    <type>Checkbox</type>
</CustomField>