force-app/main/default/objects/Sales_Opportunity__c/fields/Backoffice_Review_Sent__c.field-meta.xml
<CustomField>
    <fullName>Backoffice_Review_Sent__c</fullName>
    <label>Backoffice Review Sent</label>
    <type>Date</type>
</CustomField>