force-app/main/default/objects/Sales_Opportunity__c/fields/Benefits_to_working_with_your_company__c.field-meta.xml
<CustomField>
    <fullName>Benefits_to_working_with_your_company__c</fullName>
    <label>Benefits to working with your company</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>