force-app/main/default/objects/Sales_Opportunity__c/fields/Breakdown_Allied_Jobs_vs_Nursing_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Breakdown_Allied_Jobs_vs_Nursing_Jobs__c</fullName>
    <label>Breakdown Allied Jobs vs Nursing Jobs</label>
    <length>60</length>
    <type>Text</type>
</CustomField>