force-app/main/default/objects/Sales_Opportunity__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sales Opportunities</relationshipLabel>
    <relationshipName>Sales_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>