force-app/main/default/objects/Sales_Opportunity__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Sales Opportunities</relationshipLabel>
    <relationshipName>Sales_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>