force-app/main/default/objects/Sales_Opportunity__c/fields/Contract_Sent_Over_7__c.field-meta.xml
<CustomField>
    <fullName>Contract_Sent_Over_7__c</fullName>
    <formula>IF (TODAY() - Contract_Sent_Date__c &gt; 7 ,TRUE,FALSE)</formula>
    <label>Contract_Sent_Over_7</label>
    <type>Checkbox</type>
</CustomField>