force-app/main/default/objects/Sales_Opportunity__c/fields/Corporate_address_for_agreement__c.field-meta.xml
<CustomField>
    <fullName>Corporate_address_for_agreement__c</fullName>
    <label>Corporate address for agreement</label>
    <length>200</length>
    <type>Text</type>
</CustomField>