force-app/main/default/objects/Sales_Opportunity__c/fields/Credit_Status__c.field-meta.xml
<CustomField>
    <fullName>Credit_Status__c</fullName>
    <label>Credit Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Approval Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approval In Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>