force-app/main/default/objects/Sales_Opportunity__c/fields/Current_openings__c.field-meta.xml
<CustomField>
    <fullName>Current_openings__c</fullName>
    <label>Current openings</label>
    <type>TextArea</type>
</CustomField>