force-app/main/default/objects/Sales_Opportunity__c/fields/Date_Entered_Stage__c.field-meta.xml
<CustomField>
    <fullName>Date_Entered_Stage__c</fullName>
    <label>Date Entered Stage</label>
    <type>Date</type>
</CustomField>