force-app/main/default/objects/Sales_Opportunity__c/fields/Days_Contract_to_Won__c.field-meta.xml
<CustomField>
    <fullName>Days_Contract_to_Won__c</fullName>
    <formula>IF((Won_Date__c - Contract_Sent_Date__c)&lt;0, 0, Won_Date__c - Contract_Sent_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Days Contract to Won</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>