force-app/main/default/objects/Sales_Opportunity__c/fields/Days_in_Current_Stage__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Current_Stage__c</fullName>
    <formula>Today() - IF( ISBLANK( Date_Entered_Stage__c ), DATEVALUE(LastModifiedDate) , Date_Entered_Stage__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Days in Current Stage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>