force-app/main/default/objects/Sales_Opportunity__c/fields/Direct_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Direct_Phone_Number__c</fullName>
    <label>Direct Phone Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>