force-app/main/default/objects/Sales_Opportunity__c/fields/Do_some_position_show_on_other_platforms__c.field-meta.xml
<CustomField>
    <fullName>Do_some_position_show_on_other_platforms__c</fullName>
    <label>Do some position show on other platforms</label>
    <length>120</length>
    <type>Text</type>
</CustomField>