force-app/main/default/objects/Sales_Opportunity__c/fields/Do_you_accept_new_grads__c.field-meta.xml
<CustomField>
    <fullName>Do_you_accept_new_grads__c</fullName>
    <label>Do you accept new grads</label>
    <length>60</length>
    <type>Text</type>
</CustomField>