force-app/main/default/objects/Sales_Opportunity__c/fields/Expected_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Expected_Revenue__c</fullName>
    <formula>(Amount__c) * (Probability__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>