force-app/main/default/objects/Sales_Opportunity__c/fields/Experience_with_other_agencies__c.field-meta.xml
<CustomField>
    <fullName>Experience_with_other_agencies__c</fullName>
    <label>Experience with other agencies</label>
    <type>TextArea</type>
</CustomField>