force-app/main/default/objects/Sales_Opportunity__c/fields/Follow_up_call__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_call__c</fullName>
    <label>Follow up call</label>
    <length>120</length>
    <type>Text</type>
</CustomField>