force-app/main/default/objects/Sales_Opportunity__c/fields/hiring_from_staffing_companies__c.field-meta.xml
<CustomField>
    <fullName>hiring_from_staffing_companies__c</fullName>
    <label>% hiring from staffing companies</label>
    <length>60</length>
    <type>Text</type>
</CustomField>