force-app/main/default/objects/Sales_Opportunity__c/fields/How_are_we_notified_of_jobs__c.field-meta.xml
<CustomField>
    <fullName>How_are_we_notified_of_jobs__c</fullName>
    <label>How are we notified of jobs</label>
    <length>60</length>
    <type>Text</type>
</CustomField>