force-app/main/default/objects/Sales_Opportunity__c/fields/HR_Review_Complete__c.field-meta.xml
<CustomField>
    <fullName>HR_Review_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HR Review Complete</label>
    <type>Checkbox</type>
</CustomField>