force-app/main/default/objects/Sales_Opportunity__c/fields/HR_Review_Date_Completed__c.field-meta.xml
<CustomField>
    <fullName>HR_Review_Date_Completed__c</fullName>
    <label>HR Review Date Completed</label>
    <type>Date</type>
</CustomField>