force-app/main/default/objects/Sales_Opportunity__c/fields/Ideal_candidate_for_immediate_attention__c.field-meta.xml
<CustomField>
    <fullName>Ideal_candidate_for_immediate_attention__c</fullName>
    <label>Ideal candidate for immediate attention</label>
    <type>TextArea</type>
</CustomField>