force-app/main/default/objects/Sales_Opportunity__c/fields/If_owned_by_a_staffing_agency_which_one__c.field-meta.xml
<CustomField>
    <fullName>If_owned_by_a_staffing_agency_which_one__c</fullName>
    <label>If owned by a staffing agency which one</label>
    <length>60</length>
    <type>Text</type>
</CustomField>