force-app/main/default/objects/Sales_Opportunity__c/fields/Involvement_when_client_unresponsive__c.field-meta.xml
<CustomField>
    <fullName>Involvement_when_client_unresponsive__c</fullName>
    <label>Involvement when client unresponsive</label>
    <length>250</length>
    <type>Text</type>
</CustomField>