force-app/main/default/objects/Sales_Opportunity__c/fields/Is_Private__c.field-meta.xml
<CustomField>
    <fullName>Is_Private__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Private</label>
    <type>Checkbox</type>
</CustomField>