force-app/main/default/objects/Sales_Opportunity__c/fields/Is_there_a_parent_company__c.field-meta.xml
<CustomField>
    <fullName>Is_there_a_parent_company__c</fullName>
    <label>Is there a parent company</label>
    <length>60</length>
    <type>Text</type>
</CustomField>