force-app/main/default/objects/Sales_Opportunity__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Sales Opportunities</relationshipLabel>
    <relationshipName>Sales_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>