force-app/main/default/objects/Sales_Opportunity__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advertisement</fullName>
            </value>
            <value>
                <fullName>CAN / EMP Referral</fullName>
            </value>
            <value>
                <fullName>Centra Website</fullName>
            </value>
            <value>
                <fullName>Client Referral</fullName>
            </value>
            <value>
                <fullName>Job Board</fullName>
            </value>
            <value>
                <fullName>Leads for Nursing (On Assignment)</fullName>
            </value>
            <value>
                <fullName>Medicare.gov</fullName>
            </value>
            <value>
                <fullName>New Bid</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Prospecting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>