force-app/main/default/objects/Sales_Opportunity__c/fields/Legal_name_for_contract_credit_check__c.field-meta.xml
<CustomField>
    <fullName>Legal_name_for_contract_credit_check__c</fullName>
    <label>Legal name for contract &amp; credit check</label>
    <length>60</length>
    <type>Text</type>
</CustomField>