force-app/main/default/objects/Sales_Opportunity__c/fields/Meeting_Booked_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Booked_Date_Time__c</fullName>
    <label>Meeting Booked Date/Time</label>
    <type>DateTime</type>
</CustomField>