force-app/main/default/objects/Sales_Opportunity__c/fields/Minimum_years_expectation__c.field-meta.xml
<CustomField>
    <fullName>Minimum_years_expectation__c</fullName>
    <label>Minimum years expectation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>