force-app/main/default/objects/Sales_Opportunity__c/fields/MSP_VMS_Individual_s_Email__c.field-meta.xml
<CustomField>
    <fullName>MSP_VMS_Individual_s_Email__c</fullName>
    <label>MSP/VMS Individual&apos;s Email</label>
    <type>Email</type>
</CustomField>