force-app/main/default/objects/Sales_Opportunity__c/fields/MSP_VMS_Individual_s_Title_Position__c.field-meta.xml
<CustomField>
    <fullName>MSP_VMS_Individual_s_Title_Position__c</fullName>
    <label>MSP/VMS Individual&apos;s Title/Position</label>
    <length>60</length>
    <type>Text</type>
</CustomField>