force-app/main/default/objects/Sales_Opportunity__c/fields/MSP_VMS_Name_of_Individual__c.field-meta.xml
<CustomField>
    <fullName>MSP_VMS_Name_of_Individual__c</fullName>
    <label>MSP/VMS Name of Individual</label>
    <length>60</length>
    <type>Text</type>
</CustomField>