force-app/main/default/objects/Sales_Opportunity__c/fields/Name_of_Individual__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Individual__c</fullName>
    <label>Name of Individual</label>
    <length>60</length>
    <type>Text</type>
</CustomField>