force-app/main/default/objects/Sales_Opportunity__c/fields/Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Next_Step__c</fullName>
    <label>Next Step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>