force-app/main/default/objects/Sales_Opportunity__c/fields/of_facilities_responsible_for__c.field-meta.xml
<CustomField>
    <fullName>of_facilities_responsible_for__c</fullName>
    <label># of facilities responsible for</label>
    <length>60</length>
    <type>Text</type>
</CustomField>