force-app/main/default/objects/Sales_Opportunity__c/fields/of_medical_professionals__c.field-meta.xml
<CustomField>
    <fullName>of_medical_professionals__c</fullName>
    <label># of medical professionals</label>
    <length>60</length>
    <type>Text</type>
</CustomField>