force-app/main/default/objects/Sales_Opportunity__c/fields/Opportunity_URL__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_URL__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_300, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_300))&amp; Id</formula>
    <label>Opportunity URL</label>
    <type>Text</type>
</CustomField>