force-app/main/default/objects/Sales_Opportunity__c/fields/Other_staffing_services__c.field-meta.xml
<CustomField>
    <fullName>Other_staffing_services__c</fullName>
    <label>Other staffing services</label>
    <length>60</length>
    <type>Text</type>
</CustomField>