force-app/main/default/objects/Sales_Opportunity__c/fields/Our_agreement_or_yours__c.field-meta.xml
<CustomField>
    <fullName>Our_agreement_or_yours__c</fullName>
    <label>Our agreement or yours</label>
    <length>60</length>
    <type>Text</type>
</CustomField>