force-app/main/default/objects/Sales_Opportunity__c/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Opportunities (Parent Account)</relationshipLabel>
    <relationshipName>Sales_Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>