force-app/main/default/objects/Sales_Opportunity__c/fields/Patient_to_healthcare_professional_ratio__c.field-meta.xml
<CustomField>
    <fullName>Patient_to_healthcare_professional_ratio__c</fullName>
    <label>Patient to healthcare professional ratio</label>
    <length>60</length>
    <type>Text</type>
</CustomField>