force-app/main/default/objects/Sales_Opportunity__c/fields/Potential_Commission__c.field-meta.xml
<CustomField>
    <fullName>Potential_Commission__c</fullName>
    <formula>Amount__c * 0.1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Potential Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>