force-app/main/default/objects/Sales_Opportunity__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>