force-app/main/default/objects/Sales_Opportunity__c/fields/Primary_Campaign_Source__c.field-meta.xml
<CustomField>
    <fullName>Primary_Campaign_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Campaign Source</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Sales Opportunities</relationshipLabel>
    <relationshipName>Sales_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>