force-app/main/default/objects/Sales_Opportunity__c/fields/Probability_Currency__c.field-meta.xml
<CustomField>
    <fullName>Probability_Currency__c</fullName>
    <label>Probability Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>