force-app/main/default/objects/Sales_Opportunity__c/fields/Process_for_introducing_a_candidate__c.field-meta.xml
<CustomField>
    <fullName>Process_for_introducing_a_candidate__c</fullName>
    <label>Process for introducing a candidate</label>
    <length>350</length>
    <type>LongTextArea</type>
</CustomField>