force-app/main/default/objects/Sales_Opportunity__c/fields/Reason_Lost__c.field-meta.xml
<CustomField>
    <fullName>Reason_Lost__c</fullName>
    <label>Reason Lost</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Change in Need</fullName>
            </value>
            <value>
                <fullName>Costs</fullName>
            </value>
            <value>
                <fullName>Credit Issues</fullName>
            </value>
            <value>
                <fullName>Insurance Requirements</fullName>
            </value>
            <value>
                <fullName>Lost to competitor</fullName>
            </value>
            <value>
                <fullName>Not Using Agency / No Needs At This Time</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>