force-app/main/default/objects/Sales_Opportunity__c/fields/Reason_Waiting__c.field-meta.xml
<CustomField>
    <fullName>Reason_Waiting__c</fullName>
    <label>Reason Waiting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contract modification</fullName>
            </value>
            <value>
                <fullName>Did not pass credit</fullName>
            </value>
            <value>
                <fullName>Need candidate before executing contract</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>RFP / RFI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>