force-app/main/default/objects/Sales_Opportunity__c/fields/Reverse_billing_or_direct_billing__c.field-meta.xml
<CustomField>
    <fullName>Reverse_billing_or_direct_billing__c</fullName>
    <label>Reverse billing or direct billing</label>
    <length>60</length>
    <type>Text</type>
</CustomField>