force-app/main/default/objects/Sales_Opportunity__c/fields/RFP_Award_Date__c.field-meta.xml
<CustomField>
    <fullName>RFP_Award_Date__c</fullName>
    <label>RFP Award Date</label>
    <type>Date</type>
</CustomField>