force-app/main/default/objects/Sales_Opportunity__c/fields/Salary_ranges_for_perm_current_employees__c.field-meta.xml
<CustomField>
    <fullName>Salary_ranges_for_perm_current_employees__c</fullName>
    <label>Salary ranges for perm/current employees</label>
    <type>TextArea</type>
</CustomField>