force-app/main/default/objects/Sales_Opportunity__c/fields/Sales_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Opportunity_Name__c</fullName>
    <label>Sales Opportunity Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>