force-app/main/default/objects/Sales_Opportunity__c/fields/Sales_Opportunity_Notes__c.field-meta.xml
<CustomField>
    <fullName>Sales_Opportunity_Notes__c</fullName>
    <label>Sales Opportunity Notes</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>