force-app/main/default/objects/Sales_Opportunity__c/fields/Sales_Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Sales_Opportunity_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Opportunity Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>