force-app/main/default/objects/Sales_Opportunity__c/fields/Send_Master_Services_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Send_Master_Services_Agreement__c</fullName>
    <label>Send Master Services Agreement</label>
    <length>60</length>
    <type>Text</type>
</CustomField>