force-app/main/default/objects/Sales_Opportunity__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospecting</fullName>
            </value>
            <value>
                <fullName>Meeting Booked</fullName>
            </value>
            <value>
                <fullName>Needs Analysis</fullName>
            </value>
            <value>
                <fullName>Credit Check</fullName>
            </value>
            <value>
                <fullName>RFP Sent</fullName>
            </value>
            <value>
                <fullName>Waiting to Send</fullName>
            </value>
            <value>
                <fullName>Contract Sent</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Kick Off Call</fullName>
            </value>
            <value>
                <fullName>Sent to Backoffice</fullName>
            </value>
            <value>
                <fullName>Opportunity Won</fullName>
            </value>
            <value>
                <fullName>Opportunity Lost</fullName>
            </value>
            <value>
                <fullName>Bid Won</fullName>
            </value>
            <value>
                <fullName>Bid Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>