force-app/main/default/objects/Sales_Opportunity__c/fields/States_most_concentration_in__c.field-meta.xml
<CustomField>
    <fullName>States_most_concentration_in__c</fullName>
    <label>States most concentration in</label>
    <length>60</length>
    <type>Text</type>
</CustomField>