force-app/main/default/objects/Sales_Opportunity__c/fields/Statistical_data_on_client_response__c.field-meta.xml
<CustomField>
    <fullName>Statistical_data_on_client_response__c</fullName>
    <label>Statistical data on client response</label>
    <length>120</length>
    <type>Text</type>
</CustomField>