force-app/main/default/objects/Sales_Opportunity__c/fields/Timeframe_to_execute_an_agremeent__c.field-meta.xml
<CustomField>
    <fullName>Timeframe_to_execute_an_agremeent__c</fullName>
    <label>Timeframe to execute an agremeent</label>
    <length>60</length>
    <type>Text</type>
</CustomField>