force-app/main/default/objects/Sales_Opportunity__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Closed/Lost</fullName>
            </value>
            <value>
                <fullName>Closed/Won</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>