force-app/main/default/objects/Sales_Opportunity__c/fields/Typical_work_schedule__c.field-meta.xml
<CustomField>
    <fullName>Typical_work_schedule__c</fullName>
    <label>Typical work schedule</label>
    <type>TextArea</type>
</CustomField>