force-app/main/default/objects/Sales_Opportunity__c/fields/Who_signs_the_agreement__c.field-meta.xml
<CustomField>
    <fullName>Who_signs_the_agreement__c</fullName>
    <label>Who signs the agreement</label>
    <length>60</length>
    <type>Text</type>
</CustomField>