force-app/main/default/objects/Sales_Opportunity__c/fields/Won_Date__c.field-meta.xml
<CustomField>
    <fullName>Won_Date__c</fullName>
    <label>Won Date</label>
    <type>Date</type>
</CustomField>