force-app/main/default/objects/Sales_Opportunity__c/fields/X48_hour_turnaround_from_submission__c.field-meta.xml
<CustomField>
    <fullName>X48_hour_turnaround_from_submission__c</fullName>
    <label>48 hour turnaround from submission</label>
    <type>TextArea</type>
</CustomField>